# error-combinator

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: release.yml  test.yml
examples/: simple00.rs  simple01.rs  simple02.rs  validation00.rs  validation01.rs  validation02.rs  validation03.rs
src/: check.rs  cmberr.rs  lib.rs  n.rs
tests/: test00.rs
