[package]
name = "error-combinator"
version = "0.1.1"
edition = "2024"
authors = ["muranaka tomonari <tom.ipynb@gmail.com>"]
license = "MIT"
repository = "https://github.com/Tom-game-project/error-combinator"
keywords = ["error", "error-handling", "combinator"]
categories = ["rust-patterns"]
readme = "README.md"
description = "Type-driven error composition with functional combinators"

exclude = [
    ".github",
    ".gitignore",
    "tests/*",
    "examples/*"
]

[dependencies]
